test/conformance/gatewayapi/base/infra-manifests-static-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-conformance-infra
  labels:
    gateway-conformance: infra
---
apiVersion: v1
kind: Service
metadata:
  name: static-file-server
  namespace: gateway-conformance-infra
spec:
  selector:
    app: static-file-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-file-server
  namespace: gateway-conformance-infra
  labels:
    app: static-file-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-file-server
  template:
    metadata:
      labels:
        app: static-file-server
    spec:
      containers:
        - name: static-file-server
          image: envoyproxy/gateway-static-file-server
          imagePullPolicy: IfNotPresent
